Introduce first report structure

--- a/final-report.tex
+++ b/final-report.tex
@@ -69,9 +69,13 @@
     % Content
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \input{./content/chapter1.tex}
-    \input{./content/chapter2.tex}
-    \input{./content/chapter3.tex}
+    \input{./content/introduction/introduction.tex}
+    \input{./content/preliminaries/gnns.tex}
+    \input{./content/preliminaries/atomic_simulations.tex}
+    \input{./content/preliminaries/ocp.tex}
+    \input{./content/preliminaries/scalable_ml.tex}
+    \input{./content/preliminaries/deepspeed.tex}
+
 
     \clearpage
 
