--- a/preamble.tex
+++ b/preamble.tex
@@ -22,6 +22,7 @@
 \usepackage{float}
 \usepackage{xcolor}
 \usepackage{datetime}
+\usepackage{mathtools}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Custom packages
@@ -65,7 +66,6 @@
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\N}{\mathbb{N}}
-\newcommand{\defby}{\vcentcolon =}
 \newcommand{\Set}[1]{\ensuremath{\left\{\, #1 \,\right\}}}
 \newcommand{\set}[1]{\ensuremath{\left\{#1\right\}}}
 \newcommand{\setcomp}[2]{\Set{#1 \; \middle| \; #2}}
