--- a/preamble.tex
+++ b/preamble.tex
@@ -79,3 +79,6 @@
 % bold variables
 \newcommand{\xx}{\boldsymbol{x}}
 \newcommand{\yy}{\boldsymbol{y}}
+\newcommand{\uu}{\boldsymbol{u}}
+\newcommand{\vv}{\boldsymbol{v}}
+\newcommand{\ee}{\boldsymbol{e}}
