--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,4 +51,23 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@misc{https://doi.org/10.48550/arxiv.1910.02054,
+  doi = {10.48550/ARXIV.1910.02054},
+  
+  url = {https://arxiv.org/abs/1910.02054},
+  
+  author = {Rajbhandari, Samyam and Rasley, Jeff and Ruwase, Olatunji and He, Yuxiong},
+  
+  keywords = {Machine Learning (cs.LG), Distributed, Parallel, and Cluster Computing (cs.DC), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {ZeRO: Memory Optimizations Toward Training Trillion Parameter Models},
+  
+  publisher = {arXiv},
+  
+  year = {2019},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
 
