Add graph/structured data figure, restructure+rename images folder

--- a/content/preliminaries/gnns.tex
+++ b/content/preliminaries/gnns.tex
@@ -59,7 +59,8 @@ rectangular parts of the input image.
 Even though the topological structure of sequences and images is quite simple and regular
 compared to some general graph, we can still see both of them as graphs themselves. 
 
-\textcolor{red}{Add graph figure here!}
+% Structured data figure that shows sequences and images as graphs.
+\input{figures/gnns/structured_data_figure.tex}
 
 Graph Neural 
 Networks (GNNs) can now be regarded as a generalization of CNNs and RNNs to general graph structures.
@@ -89,4 +90,4 @@ language of the EGN framework.
 
 Within the GN framework, a graph is modeled as a 3-tuple
 \[ G \: = \: (\uu, V, E) \text{.} \]
-with 
+\textcolor{red}{TODO: Continue here!}
