--- a/preamble.tex
+++ b/preamble.tex
@@ -23,6 +23,7 @@
 \usepackage{xcolor}
 \usepackage{datetime}
 \usepackage{mathtools}
+\usepackage{tikz}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Custom packages
@@ -55,10 +56,10 @@
   
 \addbibresource{bibliography.bib}
 
-\graphicspath{{./images/}}
+\graphicspath{{./figures/}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Custom definitions to be added here
+% Custom definitions can be added here
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\C}{\mathbb{C}}
@@ -82,3 +83,21 @@
 \newcommand{\uu}{\boldsymbol{u}}
 \newcommand{\vv}{\boldsymbol{v}}
 \newcommand{\ee}{\boldsymbol{e}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Official TUM colors
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Main color
+\definecolor{tum-blue}{RGB}{0,101,189}
+
+% Secondary colors
+\definecolor{tum-dark-blue}{RGB}{0,82,147}
+\definecolor{tum-light-blue}{RGB}{100,160,200}
+\definecolor{tum-lighter-blue}{RGB}{152,198,234}
+\definecolor{tum-gray}{RGB}{153,153,153}
+
+% Emphasis
+\definecolor{tum-orange}{RGB}{227,114,34}
+\definecolor{tum-green}{RGB}{162,173,0}
+\definecolor{tum-light-gray}{RGB}{218,215,203}
