Scaling ML + layout for introduction

--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -1,7 +1,14 @@
 \section{Introduction}
 
-Some introduction to be added here.
+\subsection{Motivation}
 
-\subsection{Problem definition and goals of the project}
+Some story about how GNNs have transformed social network analysis, recommender systems, drug discovery and of course atomic simulations.
 
-Here we describe our problem and the general goals of the project.
+\subsection{Problem definition}
+
+Here we describe our problem and the general goals of the project. (Can be repetitive with parts of the preleminaries)
+
+\subsection{Contributions}
+
+The main contributions of our project (integration of Deepspeed into OCP project to scale & speed up atomic simulations). 
+Can be repetetive with later parts of our final report.
