Fix github ci (bad character)

--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -10,5 +10,5 @@ Here we describe our problem and the general goals of the project. (Can be repet
 
 \subsection{Contributions}
 
-The main contributions of our project (integration of Deepspeed into OCP project to scale & speed up atomic simulations). 
+The main contributions of our project (integration of Deepspeed into OCP project to scale and speed up atomic simulations). 
 Can be repetetive with later parts of our final report.
