Fix error caused by '&'

--- a/content/preliminaries/gnns.tex
+++ b/content/preliminaries/gnns.tex
@@ -22,7 +22,7 @@ done by minimizing a loss function (sometimes modeled as negative log-likelihood
 \[
     L(\mathcal{D}, \theta) \: \coloneqq \: \sum_{i=1}^n l(f_\theta(\xx_i), \yy_i)
 \]
-over the parameter space. Over the last decade, neural networks have proven to work 
+over the parameter space. Over the last decades, neural networks have proven to work 
 really well for implementing these functions $f_\theta$ and are usually trained by 
 variants of gradient descent.
 
@@ -51,7 +51,7 @@ For simpler structured data like sequences or images, neural
 network architectures that exploit these structures have existed for quite some time, like 
 Recurrent Neural Networks (RNNs) and
 Convolutional Neural Networks (CNNs) respectively. Particularly the introduction of CNNs 
-in the early 2010s marked a huge step forwards for tasks like image classification 
+in the early 2010s marked a huge step forward for tasks like image classification 
 compared to dense fully-connected neural networks: CNNs leverage the spatial structure of
 images as rectangular grids by applying convolutional filters like sliding windows on small
 rectangular parts of the input image. 
@@ -85,7 +85,7 @@ EGNs, which we will introduce afterwards, are even more expressive than normal
 GNs as they also model higher-order interactions between graph vertices (i.e. interactions 
 between 3 or more vertices, or---alternatively---between two graph edges). Especially
 recent GNNs for atomic simulations that make use of such higher-order interactions, as the ones 
-we will describe in subsection~\ref{subsec:atomic-simulations}, can be formulated elegantly in the
+we will describe in subsection~\ref{subsec:atomic-simulations}, can be expressed elegantly in the
 language of the EGN framework.
 
 Within the GN framework, a graph is modeled as a 3-tuple
