--- a/content/preliminaries/scalable_ml.tex
+++ b/content/preliminaries/scalable_ml.tex
@@ -20,7 +20,7 @@ A single machine multi-GPU setup is an interesting middle ground between scaling
 pipeline is executed on only one machine, we still employ a multi process system since each GPUs is used through 
 independent processes.
 
-\subsubsection{Data, Model & Pipeline Parallelism}
+\subsubsection{Data, Model and Pipeline Parallelism}
 
 In our work, we used a scaling out approach to scale the existing pipelines. Three common scaling-out strategies have emerged 
  in recent years for machine learning models. With a large amount of training data sets, long training on only a single 
