--- a/figures/gnns/structured_data_figure.tex
+++ b/figures/gnns/structured_data_figure.tex
@@ -12,7 +12,7 @@
 
     \begin{subfigure}[t]{0.3\textwidth}
         \centering
-        % Figure of an image as a graph
+        % Figure of a sequence as a graph
         \begin{tikzpicture}
             \node (1) at (1,1) {};
             \node (2) at (2,1) {};
@@ -31,7 +31,7 @@
     ~
     \begin{subfigure}[t]{0.3\textwidth}
         \centering
-        % Figure of a sequence as a graph
+        % Figure of an image as a graph
         \begin{tikzpicture}
             \node (1-1) at (1,1) {};
             \node (1-2) at (1,2) {};
@@ -105,7 +105,7 @@
             \draw[dots = 20 per 1cm,->] (C) -- (1.8,-0.5);
             \draw[dots = 20 per 1cm,<->] (F) -- (-1.8,-0.3);
         \end{tikzpicture}
-        \caption{Arbitrary graph}
+        \caption{Some arbitrary graph}
 
     \end{subfigure}
     \caption{Structured data can be represented as a graph in many cases.}
