--- a/preamble.tex
+++ b/preamble.tex
@@ -32,6 +32,8 @@
 \usepackage{csquotes}
 \usepackage{enumitem}
 
+\usetikzlibrary{shapes,snakes}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newdateformat{mydate}{\shortmonthname[\the\month]  \the\year}
@@ -100,5 +102,6 @@
 
 % Emphasis
 \definecolor{tum-orange}{RGB}{227,114,34}
+\definecolor{tum-light-orange}{RGB}{252, 214, 184}
 \definecolor{tum-green}{RGB}{162,173,0}
 \definecolor{tum-light-gray}{RGB}{218,215,203}
