--- a/figures/gnns/gn_block.tex
+++ b/figures/gnns/gn_block.tex
@@ -31,7 +31,7 @@
             % Edge Update
             \draw[draw=white] (-0.6,-3.25) rectangle (2,3.25) {};
             \draw[rounded corners] (-0.6,-1.5) rectangle (2,1.5) {};
-            \node[text=tum-gray] (T) at (1.65,1.2) {\scriptsize $\uu$};
+            \node[text=tum-dark-blue] (T) at (1.65,1.2) {\scriptsize $\uu$};
     
             \node[n_active, inner sep=1] (A) at (1,0) {\scriptsize $\vv_{r_k}$};
             \node[n_active, inner sep=1] (B) at (0,0.6) {\scriptsize $\vv_{s_k}$};
