--- a/preamble.tex
+++ b/preamble.tex
@@ -45,7 +45,7 @@
 \setlength{\evensidemargin}{25mm}
 \setlength{\textwidth}{160mm}
 
-\setlength{\parindent}{0pt}
+%\setlength{\parindent}{0pt}
 
 \setlength{\textheight}{235mm}
 \setlength{\footskip}{20mm}
@@ -86,6 +86,7 @@
 \newcommand{\uu}{\boldsymbol{u}}
 \newcommand{\vv}{\boldsymbol{v}}
 \newcommand{\ee}{\boldsymbol{e}}
+\newcommand{\ttt}{\boldsymbol{t}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Official TUM colors
